# Etrid-Infra

./: .gitignore  ARCHITECTURE.md  README.md
config/: SECURE_SCRIPTS_ARCHITECTURE.md
docker/: .dockerignore  DEPLOYMENT_CHECKLIST.bridge-monitors.md  Dockerfile  Dockerfile.pbc-builder  Dockerfile.primearc-core  QUICKSTART.bridge-monitors.md  README.bridge-monitors.md  README.md  docker-compose.bridge-monitors.yml  docker-compose.yml
monitoring/: README.md  alerting-rules-primearc.yml  docker-compose.yml  grafana-dashboard-primearc.json  install-grafana.sh  install-prometheus.sh  prometheus-primearc.yml
scripts/: build-assignments.md  check-all-nodes.sh  check-all-nodes.sh.bak  check-attester-balances.ts  check-chain-state.ts  check-governance.ts  check-mainnet-health.sh  check-registration-status.ts  cleanup-bloat.sh  create-pbc-release.sh  deploy-attesters.sh  deploy-bootnodes-chainspec.sh  deploy-bridge-services.sh  deploy-chainspec-fix.sh  find-sudo-key.ts  fix-network-key-path.sh  fund-attesters.ts  inject-all-pbc-keys-v2.sh  register-attesters-onchain.ts  sync-pbc-chainspecs.sh  (+2 more)
scripts/pbc-config/: .gitignore  Cargo.toml  GET_STARTED.txt  INDEX.md  QUICKSTART.md  README.md  SUMMARY.md  batch-configure.sh  build.sh  config.example.json  config.json  configure-pbc.sh  test-all.sh  test-connection.sh  validate-config.sh
scripts/pbc-config/solana/: CONVERSION_DETAILS.md  FILES_SUMMARY.txt  INDEX.md  QUICK_START.md  README.md  TOKEN_ADDRESS.txt  configure-sol-pbc.sh  convert-address.py  sol-pbc-config.json  verify-bridge.sh
scripts/pbc-config/src/: main.rs
(+209 files in other folders)
