[package]
name = "etrid-bridge-config"
version = "1.0.0"
edition = "2021"
authors = ["Etrid Network <dev@etrid.network>"]
description = "CLI tool for configuring Etrid PBC bridges using subxt"

[dependencies]
# Subxt for Substrate interaction
subxt = "0.35"
subxt-signer = "0.35"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Encoding
hex = "0.4"
scale-info = { version = "2", features = ["derive"] }
parity-scale-codec = { version = "3", features = ["derive"] }

# Utils
futures = "0.3"

[dev-dependencies]
mockall = "0.12"

[[bin]]
name = "etrid-bridge-config"
path = "src/main.rs"
